# experiments

./: README.md
neural-networks/: CHANGELOG.md  README.md  perceptron.sh  project.clj
neural-networks/src/neural_networks/: perceptron.clj
neural-networks/test/neural_networks/: core_test.clj
rpiOS/: .gitignore  readme.md
rpiOS/K9OS/: CMakeCache.txt  CMakeLists.txt  K9OS.cbp  Makefile  build.sh  cmake_install.cmake  k9-cstartup.c  k9-cstubs.c  k9-linker.x  k9-start.S  k9.cmake  k9os  k9os.c  kernel.elf  kernel.img  readme.md  start.elf
